@@ -13,6 +13,7 @@
   <include package="zope.app.zcmlfiles" />
   <include package="zope.app.authentication" />
   <include package="grokcore.view" />
+  <include package="zope.login" />
   <grok:grok package="grokcore.view.ftests" />
 
   <securityPolicy
